# vault

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cipher_example.cfg  pyproject.toml  setup.cfg
MyVault/: Vault.py  __main__.py  cli.py
MyVault/src/: Vault.py  database.py  helpers.py
MyVault/src/sql/: delete_secret.sql  select_all.sql  update_secret.sql
MyVault/src/statics/: exit_code.py  exit_codes.py  message.py  messages.py  prompt.py  prompts.py  query.py
MyVault/src/utils/: AESEncryption.py  Database.py  __init__.py  clipboard.py  hash.py  queries.py
MyVault/tests/: utils.py  vault.py
myvault/: __main__.py  cli.py
myvault/sql/: create_table.sql  insert_secret.sql  select_folder_name.sql  select_secret.sql  update_secret.sql
myvault/statics/: __init__.py  exit_code.py  formatted_enum.py  message.py  prompt.py  query.py
myvault/utils/: __init__.py  database.py  encryption.py  vault.py
src/: Vault.py  __init__.py  __main__.py  cli.py
src/utils/: AESEncryption.py  Database.py  clipboard.py
tests/: encryption.py  utils.py  vault.py
