[metadata]
name = MyVault
version = 0.0.1
author = Samyak Tamrakar
description = A simple, offline vault to store secrets e.g. your password.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/srtamrakar/vault
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Security :: Cryptography

[options]
packages = find:
python_requires = >=3.7
install_requires =
    click>=7.1,<7.2
    pycryptodome>=3.10,<3.11
    pyperclip>=1.8,<1.9

[options.entry_points]
console_scripts =
    myvault = MyVault.cli:commands

[flake8]
max-line-length = 120
extend-ignore = E203
